@@ -1,2 +1,2 @@
-Rely on pre-initialized dpkg-architecture variables.
+Rely on existing architecture.mk include.
 Fixed-Lintian-Tags: debian-rules-sets-dpkg-architecture-variable
