@@ -9,8 +9,8 @@ CONFIGURE_FLAGS := \
 	--without-grape \
 	--without-silo
 
-include /usr/share/dpkg/architecture.mk
 DEB_HOST_ARCH_OS=$(shell dpkg-architecture -qDEB_HOST_ARCH_OS | tr '[:lower:]' '[:upper:]')
+DEB_HOST_ARCH ?= $(shell dpkg-architecture -qDEB_HOST_ARCH)
 ifneq (,$(filter powerpc ppc64 ppc64el,$(DEB_HOST_ARCH)))
   export DEB_BUILD_MAINT_OPTIONS=hardening=-stackprotector
   CONFIGURE_FLAGS += CC=clang
