@@ -1,2 +1,2 @@
-Rely on pre-initialized dpkg-architecture variables.
+Use ?= for assignments to architecture variables.
 Fixed-Lintian-Tags: debian-rules-sets-dpkg-architecture-variable
