@@ -1,1 +1,1 @@
-Rely on pre-initialized dpkg-architecture variables.
+Use ?= for assignments to architecture variables.
