@@ -1,6 +1,9 @@
 lintian-brush (0.75) UNRELEASED; urgency=medium
 
   * Fix anongit.kde.org URLs to use https:.
+  * debian-rules-sets-dpkg-architecture-variable: Rather than including
+    /usr/share/dpkg/architecture.mk, change to soft assignment type by
+    default.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 26 Jul 2020 20:06:29 +0000
 
